# Hero

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_memory.py  test_ollama.py  test_transcribe.py  test_tts.py
hero/: __init__.py  __main__.py  config.py
hero/pipeline/: __init__.py  asr.py  llm.py  memory.py  mic.py  tts.py  vad.py
hero/ui/: __init__.py  widget.py
hero/utils/: __init__.py  audio.py
hero/vision/: __init__.py  presence.py
scripts/: make_hero_gif.py
tests/: test_pipeline.py
