[project]
name = "hero"
version = "0.1.0"
description = "Pipelined local voice agent for Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "silero-vad>=5.1",
    "faster-whisper>=1.1.0",
    "ollama>=0.4.0",
    "chromadb>=0.5.0",
    "kokoro>=0.9.0",
    "soundfile>=0.12.0",
    "pydantic>=2.0",
    "loguru>=0.7.0",
    "mediapipe>=0.10.0",
    "opencv-python-headless>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
hero = "hero.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["hero*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
